turtleart.circletwo.CircleTwo.scala.error
Erreur de compilation :
CircleTwo:3: error: not found: value geyY
  var y = geyY()
          ^